# nova-luna

./: .gitignore  AGENTS.md  GEMINI.md  NOVA_LUNA_FINAL_MASTER_REPORT.md  PHASE_19_REAL_NATIVE_INFERENCE_FINAL_REPORT.md  README.md  README_AGENT.md  REPOSITORY_CLEANUP_AUDIT.md  build.gradle  gradle.properties  settings.gradle
.cursor/rules/: 00-master-ai-platform.mdc  00-nova-luna-core.mdc  10-flutter-phone-first.mdc  20-agent-coordination.mdc  30-safety-no-fake-code.mdc  luna_nova_contractor_skill.mdc
.test-home/.android/: analytics.settings
.test-tmp/nova_luna_model_registry_test2148729949827504101/model_install/: registry.json
app/: build.gradle  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/nova/luna/demo/: DemoFlowLogger.kt  (+2 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gguf-stub-fallback.cpp  llama-jni.cpp
app/src/main/java/com/nova/luna/: MainActivity.kt
app/src/main/res/drawable/: assistant_orb_bg.xml  bg_card_rounded.xml  bg_futuristic_main.xml  bg_gradient_button.xml  bg_orb_glow.xml  ic_assistant.xml  ic_brain.xml  ic_chat.xml  ic_control.xml  ic_keyboard.xml  ic_mic.xml  ic_settings.xml  mic_button_bg.xml
app/src/main/res/layout/: activity_command_history.xml  activity_main.xml  activity_onboarding.xml  assistant_popup.xml  fragment_assistant.xml  fragment_chat.xml  fragment_home.xml  fragment_settings.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/: ARCHITECTURE.md  BUILD_AND_PROOF_RUNBOOK.md  COMMUNICATION_MODEL_REPORT.md  CURRENT_ARCHITECTURE_REPORT.md  FINAL_ANDROID_NATIVE_RELEASE_READINESS_REPORT.md  FINAL_PHONE_SMOKE_TEST_REPORT.md  FINAL_REMAINING_PHONE_SMOKE_TEST_REPORT.md  LOCAL_LLM_SETUP.md  MANUAL_PHONE_TEST_CHECKLIST.md  MANUAL_PHONE_TEST_RESULTS.md  NOVA_LUNA_A_TO_Z_PROJECT_REPORT.md  NOVA_LUNA_BRAIN_A_TO_Z_CURRENT_REPORT.md  NOVA_LUNA_FLOWCHARTS.md  NOVA_LUNA_FULL_ARCHITECTURE_AND_WORKFLOW_REPORT.md  NOVA_LUNA_FULL_PROJECT_MODEL_FLOW_AUDIT_REPORT.md  NOVA_LUNA_MODEL_INSTALL_AND_IMPORT.md  NOVA_LUNA_PROGRESS_CHECKPOINT.md  NOVA_LUNA_PROJECT_SHORT_SUMMARY.md  PHASE_18_19_LIVE_MODEL_PROOF.md  PHASE_18_TO_30_GREEN_REVIEW_REPORT.md  PHASE_18_TO_30_REAL_PHONE_SMOKE_TEST.md  PHASE_1_HANDS_REPORT.md  PHASE_27_VOICE_FLOW_REPORT.md  PHASE_29_SCREEN_UNDERSTANDING_REPORT.md  PHASE_2_EARS_REPORT.md  PHASE_30_CONFIRMATION_SYSTEM_REPORT.md  PHASE_3_MOUTH_REPORT.md  PHASE_4_FACE_REPORT.md  PHASE_5_UNIFIED_MODEL_INTEGRATION_REPORT.md  PHASE_6_REAL_PHONE_TEST_REPORT.md  PHASE_7_LOCAL_LLM_TECHNICAL_REPORT.md  PHASE_8_MEMORY_PERSONALIZATION_REPORT.md  PHONE_ONLY_RUNTIME.md  ROADMAP.md  SECURITY_AND_LIMITATIONS.md  WORK_AND_PROCESS_REPORT.md  WORK_PROCESS_REPORT.md  phase18_tokenizer_device_proof_log.txt  phase19_inference_device_proof_log.txt
docs/proof/: phase33_qwen05b_proof_log.txt  phase33_qwen15b_proof_log.txt  phase34_gemma_proof_log.txt  phase35_failover_log.txt
flutter_app/.android/: include_flutter.groovy
flutter_app/.android/Flutter/: build.gradle
flutter_app/.android/Flutter/src/main/: AndroidManifest.xml
flutter_app/android/app/: build.gradle.kts
flutter_app/lib/app/: app_router.dart
flutter_app/lib/features/assistant/screens/: assistant_home_screen.dart
phase_32_35_evidence/phase_2/: PHASE_2_FINAL_REPORT.md
phase_32_35_evidence/phase_3/: PHASE_3_FINAL_REPORT.md
phase_32_35_evidence/phase_4/: 13_clean_compileDebugJavaWithJavac_info.txt  PHASE_4_FINAL_REPORT.md
shared/: build.gradle
wear/: build.gradle
wear/src/main/: AndroidManifest.xml
wear/src/main/res/layout/: activity_wear_main.xml
wear/src/main/res/values/: strings.xml
(+654 files in other folders)
